# VkRenderer

./: CMakeLists.txt  Camera.cpp  Camera.h  GeometryStage.cpp  GeometryStage.h  MathUtility.cpp  MathUtility.h  PhongShading.cpp  PhongShading.h  Primitives.cpp  Primitives.h  README.md  Rasterisation.cpp  Rasterisation.h  ShaderVariables.h  VirtualDevice.cpp  VirtualDevice.h  VirtualScreen.cpp  VirtualScreen.h  main.cpp
TextureLoader/: Texture.cpp  Texture.h  TextureLoader.cpp  TextureLoader.h
